configure the gogole map

--- a/src/Util/Language/Eng/index.json
+++ b/src/Util/Language/Eng/index.json
@@ -3,7 +3,10 @@
     "label_validation_email_require":"Email Address is Required",
     "label_validation_email_valid":"Please enter valid email",
     "label_validation_password_require":"Password is required",
-    "label_validation_password_field_min_length_message":"Password must be at least 8 characters"
+    "label_validation_password_field_min_length_message":"Password must be at least 8 characters",
+    "label_load_map":"Load Map",
+    "label_load_Movie":"Load Movies"
+    
 
 
 
