--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">mytask</string>
+     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDcurEICnKQWZ7ygB3WXL31yERorw5k2kM</string>
+    
 </resources>
