start working in bottom sheet

--- a/src/Util/Language/Eng/index.json
+++ b/src/Util/Language/Eng/index.json
@@ -6,9 +6,8 @@
     "label_validation_password_field_min_length_message":"Password must be at least 8 characters",
     "label_load_map":"Load Map",
     "label_load_Movie":"Load Movies",
-    "label_logout_confirmation":"Are you sure you want logout?"
+    "label_logout_confirmation":"Are you sure you want logout?",
+    "label_logout":"Logout",
+    "label_close":"Close"
     
-
-
-
 }
